fix get started button visibility

--- a/assets/css/Homepage.css
+++ b/assets/css/Homepage.css
@@ -64,6 +64,10 @@
     border: 1px solid black;
 }
 
+.form-closed{
+    opacity: 0;
+}
+
 @media (max-width: 480px) {
     body{
         padding-bottom: 100px;
